// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: BookingDetail.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RouteStopFragment on RouteStop {
  cityName
  cityId
  time {
    utc
    local
  }
}

{
  bookingDetail(id:"Q3VzdG9tZXJCb29raW5nOjE2NDYzNDQ3") {
    id
    status
    arrival {
      ...RouteStopFragment
    }
    departure {
      ...RouteStopFragment
    }
    destinationImageUrl
    passengerCount
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "bookingDetail": {
      "id": "Qm9va2luZ09uZVdheToxNjQ2MzQ0Nw==",
      "status": "closed",
      "arrival": {
        "cityName": "Las Palmas",
        "cityId": "las-palmas_es",
        "time": {
          "utc": "2018-11-28T16:20:00.000Z",
          "local": "2018-11-28T16:20:00.000Z"
        }
      },
      "departure": {
        "cityName": "Vienna",
        "cityId": "vienna_at",
        "time": {
          "utc": "2018-11-28T11:20:00.000Z",
          "local": "2018-11-28T12:20:00.000Z"
        }
      },
      "destinationImageUrl": "https://images.kiwi.com/photos/600x600/las-palmas_es.jpg",
      "passengerCount": 1
    }
  }
}
`;

exports[`matches expected output: CustomerBookings.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RouteStopFragment on RouteStop {
  cityName
  cityId
  time {
    utc
    local
  }
}

fragment TripFragment on Trip {
  duration
  departure {
    cityName
  }
  arrival {
    cityName
  }
}

{
  customerBookings {
    edges {
      node {
        id
        status
        arrival {
          ...RouteStopFragment
        }
        departure {
          ...RouteStopFragment
        }
        destinationImageUrl
        passengerCount

        ... on BookingOneWay {
          trip {
            ...TripFragment
          }
        }
        ... on BookingReturn {
          inbound {
            ...TripFragment
          }
          outbound {
            ...TripFragment
          }
        }
        ... on BookingMulticity {
          trips {
            ...TripFragment
          }
        }
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "customerBookings": {
      "edges": [
        {
          "node": {
            "id": "Qm9va2luZ09uZVdheToxNjQ2MzQ0Nw==",
            "status": "closed",
            "arrival": {
              "cityName": "Las Palmas",
              "cityId": "las-palmas_es",
              "time": {
                "utc": "2018-11-28T16:20:00.000Z",
                "local": "2018-11-28T16:20:00.000Z"
              }
            },
            "departure": {
              "cityName": "Vienna",
              "cityId": "vienna_at",
              "time": {
                "utc": "2018-11-28T11:20:00.000Z",
                "local": "2018-11-28T12:20:00.000Z"
              }
            },
            "destinationImageUrl": "https://images.kiwi.com/photos/600x600/las-palmas_es.jpg",
            "passengerCount": 1,
            "trip": {
              "duration": 300,
              "departure": {
                "cityName": "Vienna"
              },
              "arrival": {
                "cityName": "Las Palmas"
              }
            }
          }
        },
        {
          "node": {
            "id": "Qm9va2luZ1JldHVybjo4MTQyODI4",
            "status": "confirmed",
            "arrival": {
              "cityName": "St. John s",
              "cityId": "st-johns_nl_ca",
              "time": {
                "utc": "2018-09-21T12:31:00.000Z",
                "local": "2018-09-21T10:01:00.000Z"
              }
            },
            "departure": {
              "cityName": "Madrid",
              "cityId": "madrid_es",
              "time": {
                "utc": "2018-09-20T19:30:00.000Z",
                "local": "2018-09-20T21:30:00.000Z"
              }
            },
            "destinationImageUrl": "https://images.kiwi.com/photos/600x600/st-johns_nl_ca.jpg",
            "passengerCount": 2,
            "inbound": {
              "duration": 915,
              "departure": {
                "cityName": "St. John s"
              },
              "arrival": {
                "cityName": "Madrid"
              }
            },
            "outbound": {
              "duration": 1021,
              "departure": {
                "cityName": "Madrid"
              },
              "arrival": {
                "cityName": "St. John s"
              }
            }
          }
        },
        {
          "node": {
            "id": "Qm9va2luZ011bHRpY2l0eTo2Njc2NTI0",
            "status": "confirmed",
            "arrival": {
              "cityName": "Bratislava",
              "cityId": "bratislava_sk",
              "time": {
                "utc": "2018-08-25T11:55:00.000Z",
                "local": "2018-08-25T13:55:00.000Z"
              }
            },
            "departure": {
              "cityName": "Bratislava",
              "cityId": "bratislava_sk",
              "time": {
                "utc": "2018-07-16T09:50:00.000Z",
                "local": "2018-07-16T11:50:00.000Z"
              }
            },
            "destinationImageUrl": "https://images.kiwi.com/photos/600x600/bratislava_sk.jpg",
            "passengerCount": 2,
            "trips": [
              {
                "duration": 230,
                "departure": {
                  "cityName": "Bratislava"
                },
                "arrival": {
                  "cityName": "Santorini"
                }
              },
              {
                "duration": 240,
                "departure": {
                  "cityName": "Santorini"
                },
                "arrival": {
                  "cityName": "Tel Aviv"
                }
              },
              {
                "duration": 590,
                "departure": {
                  "cityName": "Tel Aviv"
                },
                "arrival": {
                  "cityName": "Bratislava"
                }
              }
            ]
          }
        }
      ]
    }
  }
}
`;
